# sbi_tutorial

./: cca_compressed_data.pkl  glass_glxy.py  glass_glxy_demo.ipynb  glass_glxy_samples.ipynb  glass_sim.py  moped_compressed_data.pkl  moped_fiducial_cls.pkl  moped_perturbed_cls.pkl  pyproject.toml  sbi+harmonic.ipynb  sbi_demo.ipynb  sbi_demo_data.pkl
