[project]
name = "astrodat-2025"
version = "0.1.0"
description = "Tutorial notebook to run a toy SBI case with NLE with some sequential simulation acquisition and data compression with CCA followed by evidence calculation with SDDR and the learned harmonic mean"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emcee>=3.1.6",
    "getdist>=1.7.2",
    "harmonic>=1.3.0",
    "nautilus-sampler>=1.0.5",
    "sbi>=0.25.0",
]
